UPDATE base color

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -12,7 +12,8 @@
   font-weight: normal;
 }
 
-/*$mainColor: #111;*/
+//$mainColor: #111;
+//$textColor: white;
 $textColor: #111;
 $mainColor: white;
 $headerColor: #333;
